--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </style>
 
 
-<p> <center> About Me |  <a href="games.html" target="_self">Games</a>  | <a href="Anime.html" target="_self">Anime</a>  </p> </center>
+<p> <center> About Me |  <a href="games.html" target="_self">Games</a>  | <a href="anime.html" target="_self">Anime</a>  </p> </center>
 
 <center> <h1 id=title>Hey there, My name is Prasanna Vinotheeswaran!</h1> </center>
 
