--- a/games.html
+++ b/games.html
@@ -14,7 +14,7 @@
     }
 </style>
 
-<p> <center> <a href='index.html' target="_self">About Me</a> |  Games  | <a href='Anime.html' target="_self">Anime</a>  </p> </center>
+<p> <center> <a href='index.html' target="_self">About Me</a> |  Games  | <a href='anime.html' target="_self">Anime</a>  </p> </center>
 
 <center> <h1 style="background-color:red">I play Video Games!!</h1> </center>
 
