--- a/anime.html
+++ b/anime.html
@@ -14,7 +14,7 @@
     }
 </style>
 
-<p> <center> <a href='index.html' target="_self">About Me</a> |  <a href="games.html" target="_self">Games</a>  | Anime  </p> </center>
+<p> <center> <a href='index.html' target="_self">About Me</a> |  <a href="Games.html" target="_self">Games</a>  | Anime  </p> </center>
 
 <center> <h1 style="background-color:orange">I Love Anime!</h1> </center>
 
