--- a/index.html
+++ b/index.html
@@ -44,12 +44,8 @@
 <p>To make my train of thought simpler, I have decided to organize the sections of this website, into individual pages, sorted above.</p>
 
 
-<tt> Below is all experimental stuff, up until the end of the body. Also, this is for testing out the typewriter=style text </tt>
 
-<p> Write about my favourite command, and use the (openbracket) code (closebracket) cmd to show how it works<img src= 'images\collageimg.png' align=right></p>
-
-
-<p> Fun Fact! I went to 4 different schools in the span of 2 years!</p>
+<p> One more fun fact! I went to 4 different schools in the span of 2 years!</p>
 
 
 
